# coder

./: .gitignore  CLAUDE.md  CODER-ANALYSIS.md  CONVERSION_STATUS.md  MAINTENANCE_PLAN.md  README.md  STATE_MACHINE_ENHANCEMENTS.md  coder-session.json  index.ts  lmdb.db  lmdb.db-lock  loop-test-1.md  output.txt  package.json  quick-test.ts  test-patterns.ts  test-quant.ts  tsconfig.json
.claude/: CLAUDE.md  settings.json
.claude/plans/: LONG-RUNNING-LOOPS-PLAN.md
.github/workflows/: ci.yml  deploy.yml  eval.yml  publish.yml
.test-persistence/autosave-1/: state.json
.test-persistence/completed-1/: manifest.json  state.json
.test-persistence/interrupted-1/: manifest.json  state.json
.test-persistence/recent-completed/: manifest.json  state.json
.test-persistence/recover-1/: manifest.json  state.json
.test-persistence/summary-test/: manifest.json  state.json
.test-persistence/test-checkpoint-1/: manifest.json  state.json
.test-persistence/test-checkpoint-2/: manifest.json  state.json
.test-persistence/test-checkpoint-3/: manifest.json  state.json
.test-persistence/test-lifecycle-1/: manifest.json  state.json
.test-persistence/test-lifecycle-2/: manifest.json  state.json
.test-persistence/test-session-1/: state.json
.test-persistence/test-session-2/: state.json
.test-persistence/test-session-3/: state.json
assignments/: loops.md
assignments/.claude/: settings.local.json
assignments/MacOSClamShell/: clamshell-off.sh  clamshell-on.sh
assignments/auto-saas/: package.json
assignments/canvas-platform/: index.html  package.json  test-screenshots.js
assignments/compute-engine/: .gitignore  Cargo.toml  package.json  tsconfig.json
assignments/compute-engine/native/: libcompute_engine.d  libcompute_engine.dylib
assignments/compute-engine/src/: cli.tsx  index.ts  lib.rs
assignments/crm/: README.md  goal.md  package.json  tsconfig.json
assignments/crm/rust/: Cargo.toml  napi.toml
assignments/crm/rust/src/: lib.rs
assignments/crm/rust/src/index/: company.rs  contact.rs  deal.rs  mod.rs
assignments/crm/rust/src/index/utils/: mod.rs
assignments/crm/rust/src/media/: audio.rs  image.rs  mod.rs  video.rs
assignments/crm/rust/src/search/: index.rs  mod.rs  query.rs  schema.rs
assignments/crm/rust/src/utils/: mod.rs
assignments/dapps/: DEFI_DASHBOARD_PLAN.md
dapp/: README.md  index.html
dapp/src/: main.tsx  (+1 more)
directives/: example-intent.json
docs/: TUI-QUICKREF.md  TUI-SPEC.md
examples/: quant-conversation.ts  trading-example.ts
extracted/: README.md
memory/: MEMORY.md  telemetry-implementation.md
native/: README.md  claude_code_native.darwin-x64.node  index.d.ts  index.js  package.json
rust/: Cargo.toml
rust/src/: context_mod.rs  diff.rs  hash.rs  highlight.rs  lib.rs  multi_edit.rs  search.rs  structure.rs  tokens.rs  tool_pairs.rs
rust/src/cognitive_security/: mod.rs  signed_action.rs
rust/src/cognitive_security/action/: taxonomy.rs
rust/src/cognitive_security/flow/: mod.rs  policies.rs  prevention.rs
rust/src/cognitive_security/intent/: alignment.rs  corruption.rs  directives.rs  mod.rs  signing.rs
src/: cli.ts  index.ts
test/: grep.test.ts
tests/: api-streaming.test.ts  quick-test.ts  session-template-demo.ts  session-template.jsonl  signature-immutable.test.ts  spinner.test.ts  status-line.test.ts  test-classify-data.ts  test-patterns.ts  test-quant.ts  trading-example.ts  tui-footer.test.ts  tui-render.test.ts  verify-signature.ts
(+679 files in other folders)
