[package]
name = "claude-code-native"
version = "0.1.0"
edition = "2021"
authors = ["ebowwa"]
description = "Native modules for Claude Code Remake"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
grep = "0.3"
ignore = "0.4"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
strip = true
