[package]
name = "claude-code-native"
version = "0.1.0"
edition = "2021"
authors = ["ebowwa"]
description = "Native modules for Claude Code Remake"

[lib]
crate-type = ["cdylib"]

[package.metadata.napi]
additional-flags = ["--no-const-enum"]

[[package.metadata.napi.binaries]]
name = "claude-code-native"
package = "claude-code-native"

[dependencies]
napi = { version = "2", features = ["async"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
md-5 = "0.10"
twox-hash = "1"
hex = "0.4"
syntect = "5"
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-java = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-php = "0.20"
path-clean = "1"
regex = "1"
similar = "2"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
opt-level = 3
strip = true
