[package]
name = "compute-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
blake3 = "1.5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
