[package]
name = "crm-native"
version = "0.1.0"
edition = "2021"
authors = ["ebowwa"]
license = "MIT"
description = "Native Rust module for CRM system with Tantivy search and media metadata extraction"
repository = "https://github.com/ebowwa/codespaces.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "2", features = ["async", "tokio_rt", "serde-json"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs"] }

# Search engine (Tantivy)
tantivy = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = "0.25"
kamadak-exif = "0.5"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallel processing
rayon = "1"

# File system utilities
walkdir = "2"
mime_guess = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
opt-level = 3
